src/objects/Energy_Cost_Calculator__c.object
<CustomObject>
    <fields>
        <fullName>April_Previous_Year__c</fullName>
        <label>April (Previous Year)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April__c</fullName>
        <label>April</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August_Previous_Year__c</fullName>
        <label>August (Previous Year)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August__c</fullName>
        <label>August</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December_Previous_Year__c</fullName>
        <label>December (Previous Year)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December__c</fullName>
        <label>December</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>February_Previous_Year__c</fullName>
        <label>February (Previous Year)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>February__c</fullName>
        <label>February</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>January_Previous_Year__c</fullName>
        <label>January (Previous Year)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>January__c</fullName>
        <label>January</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_Previous_Year__c</fullName>
        <label>July (Previous Year)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July__c</fullName>
        <label>July</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_Previous_Year__c</fullName>
        <label>June (Previous Year)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June__c</fullName>
        <label>June</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March_Previous_Year__c</fullName>
        <label>March (Previous Year)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March__c</fullName>
        <label>March</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_Previous_Year__c</fullName>
        <label>May (Previous Year)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May__c</fullName>
        <label>May</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>November_Previous_Year__c</fullName>
        <label>November (Previous Year)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>November__c</fullName>
        <label>November</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October_Previous_Year__c</fullName>
        <label>October (Previous Year)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October__c</fullName>
        <label>October</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>September_Previous_Year__c</fullName>
        <label>September (Previous Year)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>September__c</fullName>
        <label>September</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Energy Cost Calculator</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Energy Cost Calculator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Energy Cost Calculator</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>